src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>APTS_ApplyOptionPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag specifies whether option price of line Item needs to be rollup on bundle</description>
        <label>ApplyOptionPrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Daikin_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom Pricing Callback</description>
        <label>Daikin Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_WRC_Percentage__c</fullName>
        <label>WRC Percentage</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WRC_Product__c</fullName>
        <label>WRC Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Contingency</fullName>
                </value>
                <value>
                    <fullName>Warranty (Equipment)</fullName>
                </value>
                <value>
                    <fullName>Warranty (Parts &amp; Material)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Tax_Code__c</fullName>
        <inlineHelpText>This is the Avalara Tax Code for product level taxabiltiy rules.</inlineHelpText>
        <label>Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__UPC__c</fullName>
        <inlineHelpText>This is the UPC Code for product level taxabiltiy rules.</inlineHelpText>
        <label>UPC</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BundleInvoiceLevel__c</fullName>
        <description>The invoice level associated with the bundle</description>
        <inlineHelpText>The invoice level associated with the bundle</inlineHelpText>
        <label>Bundle Invoice Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                    <default>true</default>
                    <label>Standalone</label>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Customizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product must be configured during selection.</description>
        <label>Must Configure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DiscontinuedDate__c</fullName>
        <description>The date when the product is pulled out and rendered unavailable for sale on the store</description>
        <inlineHelpText>The date when the product is pulled out and rendered unavailable for sale on the store</inlineHelpText>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The product effective date. The product becomes available for selection on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveStartDate__c</fullName>
        <description>The start date of the product in a store</description>
        <inlineHelpText>The start date of the product in a store</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExcludeFromSitemap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product is listed for indexing by search engines.</description>
        <inlineHelpText>Indicates whether the product is listed for indexing by search engines.</inlineHelpText>
        <label>Exclude From Sitemap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The product expiration date. The product is unavailable for selection after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has default rules</description>
        <label>Has Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasSearchAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true the product can be considered as base product for searching related products</description>
        <label>Has Search Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconId__c</fullName>
        <description>The attachment object ID of the uploaded icon image file.</description>
        <label>Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconSize__c</fullName>
        <description>The actual size of the icon.</description>
        <inlineHelpText>The actual size of the icon.</inlineHelpText>
        <label>Actual Icon Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Icon__c</fullName>
        <description>Displays the icon uploaded using the icon button.</description>
        <formula>HYPERLINK( &quot;/apex/Apttus_Config2__IconUploader?productId=&quot;+Id, IF(ISBLANK(Apttus_Config2__IconId__c) , IMAGE(&quot;/resource/Apttus_Config2__Image_UploadIcon&quot;, &quot;Upload Icon&quot;, 50, 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+Apttus_Config2__IconId__c , &quot;Icon&quot;, 50, 50)) , &quot;_top&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LaunchDate__c</fullName>
        <description>The date when the product is launched for selling.</description>
        <inlineHelpText>The date when the product is launched for selling.</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The default unit of measure for the product</description>
        <label>Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Version__c</fullName>
        <defaultValue>1.00</defaultValue>
        <label>Version</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apttus Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Searchable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By clicking this box it makes the product searchable.</description>
        <inlineHelpText>Check this box if the product should be searchable in the Apttus shopping cart.</inlineHelpText>
        <label>Apttus Searchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Multiple_Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if multiple asset records should be created when a quantity &gt; 1 is selected for this product.</description>
        <inlineHelpText>Indicates if multiple asset records should be created when a quantity &gt; 1 is selected for this product.</inlineHelpText>
        <label>Create Multiple Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AM Solution</label>
        <referenceTo>DMAPP__AM_Solution__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DW_Active_Date__c</fullName>
        <label>DW Active Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DW_Inactive_Date__c</fullName>
        <label>DW Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DW_PCL_Description__c</fullName>
        <label>DW PCL Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DW_Product_Business_Unit__c</fullName>
        <label>DW Product Business Unit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Product_Class__c</fullName>
        <label>DW Product Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Product_Family__c</fullName>
        <label>DW Product Family</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DW_Product_Line__c</fullName>
        <label>DW Product Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>French_Product_Name__c</fullName>
        <description>Needed so Tasks can be output on documentation in French.</description>
        <label>French Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Must check if Intelligent Equipment Gateway and Energy Management Model products so that resulting Assets are set as Record Usage = IE which prevents the Asset from being deleted. ADMIN ONLY field.</description>
        <inlineHelpText>Must check if Intelligent Equipment Gateway or Energy Management Model product so that resulting Gateway and EMM Assets are set as Record Usage = IE which prevents the Asset from being deleted.</inlineHelpText>
        <label>IE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LA_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked then it is only LA product else the product is used both in LA and NA</description>
        <label>LA Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Type__c</fullName>
        <label>Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAT 1</fullName>
                </value>
                <value>
                    <fullName>CAT 2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Product Category</description>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_ID__c</fullName>
        <externalId>true</externalId>
        <label>Production ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish_Product_Description__c</fullName>
        <label>Spanish Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spanish_Product_Name__c</fullName>
        <label>Spanish Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startup_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if Startup is required for this product.</description>
        <inlineHelpText>Specifies if Startup is required for this product.</inlineHelpText>
        <label>Startup Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRC_Group__c</fullName>
        <inlineHelpText>Identifies which TRC group is responsible for handling Cases associated with this product. Web cases are assigned based on this field.</inlineHelpText>
        <label>TRC Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TRC - AAH</fullName>
                </value>
                <value>
                    <fullName>TRC - ATS</fullName>
                </value>
                <value>
                    <fullName>TRC - Chillers</fullName>
                </value>
                <value>
                    <fullName>TRC - Controls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Model_Materials_for_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Model Materials for Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Tax_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Tax Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_And_Model_Number__c</fullName>
        <formula>Vendor_Supplier__c &amp; &apos;-&apos;  &amp;  ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor And Model Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Supplier_Long__c</fullName>
        <description>Full name of Vendor/Supplier.</description>
        <inlineHelpText>Full name of Vendor/Supplier.</inlineHelpText>
        <label>Vendor/Supplier Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Supplier__c</fullName>
        <label>Vendor/Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID. DW_McQuayDataWarehouse.dbo.DW_DIM_EQUIPMENT_PRODUCT.DEP_EQUIPMENT_PRODUCT_KEY</inlineHelpText>
        <label>Warehouse ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Sub_Category__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Vendor_Supplier__c</columns>
        <columns>Create_Multiple_Assets__c</columns>
        <columns>Key_Product__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Sub_Category__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Vendor_Supplier__c</columns>
        <columns>Create_Multiple_Assets__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Key_Product__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>TRC_Group__c</columns>
        <columns>DW_Product_Business_Unit__c</columns>
        <columns>DW_Product_Family__c</columns>
        <columns>DW_Product_Line__c</columns>
        <columns>DW_Product_Class__c</columns>
        <columns>DW_Active_Date__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>No_TRC_Group</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>TRC_Group__c</columns>
        <columns>DW_Product_Business_Unit__c</columns>
        <columns>DW_Product_Family__c</columns>
        <columns>DW_Product_Line__c</columns>
        <columns>DW_Product_Class__c</columns>
        <columns>DW_Active_Date__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRC_Group__c</field>
            <operation>equals</operation>
        </filters>
        <label>No TRC Group</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TRC_AAH</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>TRC_Group__c</columns>
        <columns>DW_Product_Business_Unit__c</columns>
        <columns>DW_Product_Family__c</columns>
        <columns>DW_Product_Line__c</columns>
        <columns>DW_Product_Class__c</columns>
        <columns>DW_Active_Date__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRC_Group__c</field>
            <operation>equals</operation>
            <value>TRC - AAH</value>
        </filters>
        <label>TRC - AAH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TRC_ATS</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>TRC_Group__c</columns>
        <columns>DW_Product_Business_Unit__c</columns>
        <columns>DW_Product_Family__c</columns>
        <columns>DW_Product_Line__c</columns>
        <columns>DW_Product_Class__c</columns>
        <columns>DW_Active_Date__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRC_Group__c</field>
            <operation>equals</operation>
            <value>TRC - ATS</value>
        </filters>
        <label>TRC - ATS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TRC_Chillers</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>TRC_Group__c</columns>
        <columns>DW_Product_Business_Unit__c</columns>
        <columns>DW_Product_Family__c</columns>
        <columns>DW_Product_Line__c</columns>
        <columns>DW_Product_Class__c</columns>
        <columns>DW_Active_Date__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRC_Group__c</field>
            <operation>equals</operation>
            <value>TRC - Chillers</value>
        </filters>
        <label>TRC - Chillers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TRC_Controls</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>TRC_Group__c</columns>
        <columns>DW_Product_Business_Unit__c</columns>
        <columns>DW_Product_Family__c</columns>
        <columns>DW_Product_Line__c</columns>
        <columns>DW_Product_Class__c</columns>
        <columns>DW_Active_Date__c</columns>
        <columns>Startup_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRC_Group__c</field>
            <operation>equals</operation>
            <value>TRC - Controls</value>
        </filters>
        <label>TRC - Controls</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Latin_America</fullName>
        <active>true</active>
        <label>Products</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>